# enkido

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: deploy.yml
akkado/: CMakeLists.txt
akkado/include/akkado/: akkado.hpp  analyzer.hpp  ast.hpp  builtins.hpp  chord_parser.hpp  codegen.hpp  diagnostics.hpp  lexer.hpp  mini_lexer.hpp  mini_parser.hpp  mini_token.hpp  music_theory.hpp  parser.hpp  pattern_debug.hpp  pattern_eval.hpp  pattern_event.hpp  sample_registry.hpp  stdlib.hpp  symbol_table.hpp  token.hpp
akkado/include/akkado/codegen/: arrays.hpp  codegen.hpp  fm_detection.hpp  helpers.hpp  literals.hpp
akkado/src/: akkado.cpp  analyzer.cpp  chord_parser.cpp  codegen.cpp  codegen_arrays.cpp  codegen_functions.cpp  codegen_params.cpp  codegen_patterns.cpp  diagnostics.cpp  lexer.cpp  mini_lexer.cpp  mini_parser.cpp  parser.cpp  pattern_debug.cpp  pattern_eval.cpp  symbol_table.cpp
akkado/tests/: CMakeLists.txt  test_akkado.cpp  test_analyzer.cpp  test_ast_arena.cpp  test_buffer_allocator.cpp  test_chord.cpp  test_codegen.cpp  test_diagnostics.cpp  test_fm_detection.cpp  test_lexer.cpp  test_mini_notation.cpp  test_parser.cpp  test_pattern_debug.cpp  test_symbol_table.cpp
cedar/: CMakeLists.txt
cedar/bindings/: CMakeLists.txt  bindings.cpp
cedar/include/cedar/: cedar.hpp
cedar/include/cedar/audio/: sample_pack.hpp  wav_loader.hpp
cedar/include/cedar/dsp/: constants.hpp
cedar/include/cedar/opcodes/: arithmetic.hpp  delays.hpp  distortion.hpp  dsp_state.hpp  dsp_utils.hpp  dynamics.hpp  envelopes.hpp  filters.hpp  logic.hpp  math.hpp  minblep.hpp  modulation.hpp  opcodes.hpp  oscillators.hpp  oversampling.hpp  reverbs.hpp  samplers.hpp  sequence.hpp  sequencing.hpp  utility.hpp
cedar/include/cedar/vm/: audio_arena.hpp  buffer_pool.hpp  context.hpp  crossfade_state.hpp  env_map.hpp  instruction.hpp  program_slot.hpp  sample_bank.hpp  state_pool.hpp  swap_controller.hpp  vm.hpp
cedar/src/: cedar.cpp
cedar/src/opcodes/: minblep_state.cpp  minblep_table.cpp
cedar/src/vm/: vm.cpp
cedar/tests/: CMakeLists.txt  test_audio_arena.cpp  test_buffer_pool.cpp  test_cedar.cpp  test_concurrency.cpp  test_crossfade.cpp  test_env_map.cpp  test_memory_stress.cpp  test_pattern_query.cpp  test_sample_bank.cpp  test_sequence.cpp  test_state_pool.cpp  test_vm.cpp
cmake/: CompilerOptions.cmake  Coverage.cmake  Dependencies.cmake
docs/: Akkado A Rhythmic & DSP Language Specification.md  PRD Records and Field Access.md  PRD-Conditionals-Logic.md  PRD-Editor-Autocomplete.md  PRD-Pattern-Array-Note-Extensions.md  Strudel Implementation Spec.md  Technical Specification_ SquelchEngine Adaptive Resonant Distortion & Filter System.md  cedar-vm-hot-swap-implementation.md  dsp-quality-checklist.md  enkido-web-ide-prd.md  initial_prd.md  mini-notation-implementation.md  netlify_deployment.md  prd-godot-extension.md  prd-parameter-exposure.md  sampler_usage.md  smooch_wavetable_synth_prd.md  synth-overview.md  web_sample_loading.md
experiments/: .gitignore  README.md  cedar_testing.py  gen_wavetables.py  pyproject.toml  test_dynamics.py  test_effects.py  test_envelopes.py  test_filters.py  test_fm_aliasing.py  test_harness.py  test_minblep_sqr.py  test_minblep_table.py  test_osc_basic.py  test_oscillators.py  test_polyblep_symmetry.py  test_pwm.py  test_pwm_fm.py  test_pwm_phase.py  test_sampler.py  test_sequencers.py  test_sqr_corrections.py  test_sqr_debug.py  test_utility.py  utils.py  visualize.py
scripts/: coverage.sh
tools/: CMakeLists.txt
tools/akkado-cli/: CMakeLists.txt  main.cpp
tools/cedar-cli/: CMakeLists.txt  main.cpp
tools/enkido-cli/: CMakeLists.txt  audio_engine.cpp  audio_engine.hpp  bytecode_dump.cpp  bytecode_dump.hpp  bytecode_loader.cpp  bytecode_loader.hpp  main.cpp
tools/enkido-cli/ui/: bitmap_font.cpp  bitmap_font.hpp  text_buffer.cpp  text_buffer.hpp  ui_mode.cpp  ui_mode.hpp
web/: .gitignore  README.md  bun.lockb  netlify.toml  package.json  svelte.config.js  vite.config.ts
web/scripts/: build-docs-index.ts  generate-opcode-metadata.ts
web/src/: app.css  app.html
web/src/lib/: index.ts
web/src/lib/audio/: default-samples.ts  engine.ts  wasm-loader.ts  worklet-processor.ts
web/src/lib/compiler/: akkado.ts
web/src/lib/components/Editor/: Editor.svelte  editor-linter.ts
web/src/lib/components/Panel/: DebugPanel.svelte  PatternDebugPanel.svelte  ResizeHandle.svelte  SidePanel.svelte  StateInspector.svelte
web/src/lib/components/Params/: ParamButton.svelte  ParamSelect.svelte  ParamSlider.svelte  ParamToggle.svelte  ParamsPanel.svelte  index.ts
web/src/lib/components/Theme/: ColorInput.svelte  ThemeColorEditor.svelte  ThemeSelector.svelte
web/src/lib/components/Transport/: Transport.svelte
web/src/lib/docs/: index.ts  lookup-index.ts  lookup.ts  manifest.ts  parser.ts  types.ts
web/src/lib/docs/components/: DocBreadcrumbs.svelte  DocCodeWidget.svelte  DocMarkdown.svelte  DocNavigation.svelte  DocSearch.svelte  DocsFullNav.svelte  DocsPanel.svelte
web/src/lib/editor/: akkado-completions.ts  instruction-highlight.ts  pattern-preview.ts  signature-help.ts  step-highlight.ts
web/src/lib/stores/: audio.svelte.ts  docs.svelte.ts  editor.svelte.ts  pattern-highlight.svelte.ts  settings.svelte.ts  theme.svelte.ts
web/src/lib/themes/: presets.ts
web/src/lib/types/: theme.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/docs/: +layout.svelte  +page.svelte
web/src/routes/docs/[category]/: +page.svelte
web/static/docs/: DOCUMENTATION_GUIDE.md
web/static/docs/tutorials/: 01-hello-sine.md  02-filters.md  03-synthesis.md  04-rhythm.md  05-testing-progression.md
web/static/wasm/: enkido.js
web/static/worklet/: cedar-processor.js
web/wasm/: CMakeLists.txt  build.sh  build_debug.sh  enkido_wasm.cpp
(+17 files in other folders)
